--- a/style.css
+++ b/style.css
@@ -1,15 +1,24 @@
 .jumbotron{
 	padding-top: 80px;
 	background-color:lightskyblue;
+	padding-bottom: auto;
 
 }
 
 #gallery{
 	background-color:  pink;
+	padding-bottom: 70px;
+
+}
+
+#service{
+	padding-top: 5px;
+	background-color: lightskyblue;
 }
 
 #about{
 	background-color: lightskyblue;
+	padding-top: 0;
 }
 
 footer a{
@@ -23,8 +32,13 @@ footer a{
 
 
 .container{
-	padding: 10px;
+	padding: 0;
 
+}
+
+.container2{
+	padding: 0;
+	background-color: lightskyblue;
 }
 footer{
 	padding-bottom: 20px;
@@ -37,10 +51,15 @@ section{
 #about{
 	background-color: lightskyblue;
 	text-align: center;
+	padding-top: 3px;
 }
 
 #contact{
 	background-color: lightskyblue;
+}
+
+#biodata{
+	padding-top: 0px;
 }
 
 
@@ -53,7 +72,7 @@ footer{
 }
 
 .table tr td{
-	
+	padding-top: 10px;
 	width: 50%;
 }
 
@@ -104,7 +123,7 @@ tr td{
     clear: both;
 }
 
-/*mengatur ukuran dan jarak kotak service*/
+/*ukuran dan jarak kotak service*/
 .kotak-service .item-service{
 	width: 30%;
 	padding: 20px;
@@ -148,4 +167,12 @@ tr td{
 	margin-top: 30px;
 }
 
+
+body{
+	font-family: 'Poppins', sans-serif;
+}
+
+.jumbotron h1{
+	font-weight: bold;
+}
 
